--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -33,13 +33,13 @@
                   <TextField layoutX="14.0" layoutY="61.0" prefHeight="26.0" prefWidth="261.0" promptText="Общая площадь" />
                   <TextField layoutX="13.0" layoutY="136.0" prefHeight="26.0" prefWidth="262.0" promptText="Стоимость ДП за кв.м" />
                   <TextField layoutX="13.0" layoutY="171.0" prefHeight="26.0" prefWidth="262.0" promptText="Скидка за ДП %" />
-                  <Button fx:id="addRoomButton" layoutX="13.0" layoutY="99.0" mnemonicParsing="false" onAction="#addRoom" prefHeight="26.0" prefWidth="262.0" text="+ Добавить помещение" />
+                  <Button fx:id="createRoomButton" layoutX="13.0" layoutY="99.0" mnemonicParsing="false" onAction="#addRoom" prefHeight="26.0" prefWidth="262.0" text="+ Добавить помещение" />
                   <Button fx:id="addPaymentButton" layoutX="13.0" layoutY="208.0" mnemonicParsing="false" onAction="#addPayment" prefHeight="26.0" prefWidth="262.0" text="+ Добавить этап оплаты" />
                   <ToggleButton layoutX="200.0" layoutY="245.0" mnemonicParsing="false" text="Р" />
                   <ToggleButton layoutX="224.0" layoutY="245.0" mnemonicParsing="false" text="\$" />
                   <ToggleButton layoutX="248.0" layoutY="245.0" mnemonicParsing="false" text="Э" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Валюта :" />
-                  <Button fx:id="createProjectButton1" layoutX="13.0" layoutY="278.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="262.0" text="Сформировать" />
+                  <Button fx:id="createButton" layoutX="13.0" layoutY="278.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="262.0" text="Сформировать" />
                     </children>
                 </AnchorPane>
             </content>
