--- a/src/sample/RoomName.fxml
+++ b/src/sample/RoomName.fxml
@@ -5,18 +5,16 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="362.0"
-            prefWidth="422.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="sample.RoomNameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="362.0" prefWidth="422.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RoomNameController">
     <children>
-        <Button onAction="#addRoomName" layoutX="116.0" layoutY="31.0" mnemonicParsing="false" text="Добавить"/>
-        <Button layoutX="227.0" layoutY="31.0" mnemonicParsing="false" text="Удалить"/>
-        <Button onAction="#saveElement" layoutX="169.0" layoutY="295.0" mnemonicParsing="false" text="Сохранить"/>
+        <Button layoutX="116.0" layoutY="31.0" mnemonicParsing="false" onAction="#addRoomName" text="Добавить" />
+        <Button layoutX="227.0" layoutY="31.0" mnemonicParsing="false" onAction="#deleteRoomElement" text="Удалить" />
+        <Button layoutX="169.0" layoutY="295.0" mnemonicParsing="false" onAction="#saveRoomElement" text="Сохранить" />
         <TableView fx:id="roomTableView" layoutX="27.0" layoutY="73.0" prefHeight="200.0" prefWidth="358.0">
             <columns>
-                <TableColumn fx:id="colNameRoom" prefWidth="184.79998397827148" text="Помещение"/>
-                <TableColumn fx:id="colYardageRoom" prefWidth="99.19996643066406" text="Площадь"/>
-                <TableColumn fx:id="colBathroom" prefWidth="71.20001220703125" text="Санузел"/>
+                <TableColumn fx:id="colNameRoom" onEditCommit="#onEditChanged" prefWidth="184.79998397827148" text="Помещение" />
+                <TableColumn fx:id="colYardageRoom" prefWidth="99.19996643066406" text="Площадь" />
+                <TableColumn fx:id="colBathroom" prefWidth="71.20001220703125" text="Санузел" />
             </columns>
         </TableView>
     </children>
